refactor(ui): project explore entity form
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/ui/src/app/views/projectv2/explore/entity/entity-form.scss
+++ b/ui/src/app/views/projectv2/explore/entity/entity-form.scss
@@ -5,7 +5,7 @@
     width: 100%;
     overflow: hidden;
 
-    app-json-form {
+    app-entity-json-form {
         flex: 1;
         overflow: hidden;
         overflow-y: auto;
