--- a/ui/src/app/views/projectv2/explore/explore-entity-workflow.scss
+++ b/ui/src/app/views/projectv2/explore/explore-entity-workflow.scss
@@ -23,14 +23,13 @@
             flex-direction: column;
             height: 100%;
 
-            app-json-form {
+            app-entity-json-form {
                 flex: 1;
                 overflow: hidden;
                 overflow-y: auto;
             }
         }
     }
-
 
     app-resizable-panel {
         height: 100%;
