--- a/ui/src/app/views/projectv2/explore/entity/entity-form.html
+++ b/ui/src/app/views/projectv2/explore/entity/entity-form.html
@@ -1,9 +1,9 @@
 <ng-container *ngIf="flatSchema && data">
-    <app-json-form [class.disableSelection]="resizing" [disabled]="resizing" [parentType]="parentType"
-                   [entityType]="entityType" [schema]="flatSchema" [data]="dataForm"
-                   (dataChange)="onFormChange($event)"></app-json-form>
+    <app-entity-json-form [class.disableSelection]="resizing" [disabled]="resizing" [parentType]="parentType"
+        [entityType]="entityType" [schema]="flatSchema" [data]="dataForm"
+        (dataChange)="onFormChange($event)"></app-entity-json-form>
     <app-resizable-panel minSize="400" [initialSize]="panelSize" (onGrabbingStart)="panelStartResize()"
-                         (onGrabbingEnd)="panelEndResize($event)">
+        (onGrabbingEnd)="panelEndResize($event)">
         <ng-container *ngIf="syntaxErrors?.length > 0">
             <nz-alert nzType="error" [nzMessage]="syntaxErrorTmpl"></nz-alert>
             <ng-template #syntaxErrorTmpl>
@@ -18,7 +18,6 @@
             <nz-tab [nzTitle]="path"></nz-tab>
         </nz-tabset>
         <nz-code-editor #editor [ngModel]="dataEditor" [nzEditorOption]="editorOption"
-                        (ngModelChange)="onEditorChange($event)"
-                        (nzEditorInitialized)="onEditorInit($event)"></nz-code-editor>
+            (ngModelChange)="onEditorChange($event)" (nzEditorInitialized)="onEditorInit($event)"></nz-code-editor>
     </app-resizable-panel>
 </ng-container>
