--- a/ui/src/app/views/project/add/project.add.html
+++ b/ui/src/app/views/project/add/project.add.html
@@ -60,7 +60,7 @@
     <div *nzModalContent>
         <form nz-form>
             <nz-form-item>
-                <nz-form-label>Groupe name</nz-form-label>
+                <nz-form-label>Group name</nz-form-label>
                 <nz-form-control>
                     <input nz-input type="text" name="groupname" [(ngModel)]="newGroup.name">
                 </nz-form-control>
