--- a/ui/src/app/views/projectv2/run/run.scss
+++ b/ui/src/app/views/projectv2/run/run.scss
@@ -27,7 +27,7 @@
             position: absolute;
             top: 0;
             left: 0;
-            z-index: 1000;
+            z-index: 100;
             background-color: white;
             border-bottom-right-radius: 40px;
 
@@ -46,7 +46,7 @@
         }
 
         .controls {
-            z-index: 1000;
+            z-index: 100;
             height: 40px;
             border: 2px solid $polar_grey_3;
             border-radius: 10px;
@@ -103,6 +103,10 @@
 
         nz-page-header-content {
             padding: 0 0 0 32px;
+
+            .templateDetails {
+                margin-left: 5px;
+            }
         }
     }
 
@@ -191,7 +195,7 @@
 }
 
 app-resizable-panel {
-    z-index: 2000;
+    z-index: 200;
     position: relative;
 
     .controls {
