fix(ui): input retention name

--- a/ui/src/app/views/project/show/admin/project.admin.html
+++ b/ui/src/app/views/project/show/admin/project.admin.html
@@ -33,8 +33,8 @@
             <nz-form-item *ngIf="v2Enabled">
                 <nz-form-label [nzSpan]="3">As-code workflow run retention</nz-form-label>
                 <nz-form-control>
-                    <input nz-input type="number" name="formProjectUpdateName" placeholder="Workflow retention"
-                        [(ngModel)]="project.workflow_retention" [disabled]="loading" required #formProjectUpdateName="ngModel">
+                    <input nz-input type="number" name="formProjectRetention" placeholder="Workflow retention"
+                        [(ngModel)]="project.workflow_retention" [disabled]="loading" required #formProjectRetention="ngModel">
                 </nz-form-control>
             </nz-form-item>
             <nz-form-item nzJustify="end">
