--- a/ui/src/app/views/projectv2/explore/explore-repository.html
+++ b/ui/src/app/views/projectv2/explore/explore-repository.html
@@ -147,7 +147,12 @@
             </div>
             <div class="section">
                 <h3>Analysis</h3>
-                <nz-row>
+                <nz-row *ngIf="!selectedAnalysis">
+                    <nz-col nzSpan="24">
+                        <nz-alert [nzMessage]="'No analysis'" nzType="info"></nz-alert>
+                    </nz-col>
+                </nz-row>
+                <nz-row *ngIf="selectedAnalysis">
                     <nz-col nzSpan="12">
                         <div class="field">
                             <div class="label">Status:</div>
