--- a/ui/libs/workflow-graph/src/lib/node/job-node.scss
+++ b/ui/libs/workflow-graph/src/lib/node/job-node.scss
@@ -7,6 +7,7 @@
 }
 
 .node {
+    position: relative;
     width: 100%;
     height: 100%;
     border: 2px solid $polar_grey_3;
@@ -38,10 +39,6 @@
             border-color: $darkTheme_blue;
         }
 
-        &.scheduling {
-            border-color: $darkTheme_blue;
-        }
-
         &.inactive {
             background-color: $darkTheme_night_grey;
             border-color: grey;
@@ -69,7 +66,7 @@
     }
 
     .name {
-        font-size: 1em;
+        font-size: 0.9em;
         flex: 1;
         font-weight: bold;
         white-space: nowrap;
@@ -88,6 +85,13 @@
         flex-direction: column;
     }
 
+    .status {
+        position: absolute;
+        bottom: 5px;
+        right: 10px;
+        font-size: 0.6em;
+    }
+
     &.success {
         background-color: $cds_color_light_green;
         border-color: $cds_color_green;
@@ -100,10 +104,6 @@
 
     &.building {
         background-color: $cds_color_light_teal;
-        border-color: $cds_color_teal;
-    }
-
-    &.scheduling {
         border-color: $cds_color_teal;
     }
 
