--- a/ui/src/app/views/projectv2/explore/explore-repository.html
+++ b/ui/src/app/views/projectv2/explore/explore-repository.html
@@ -36,7 +36,7 @@
                         <th>Error</th>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let h of hooksTable.data" (click)="displayDetail(h)">
+                        <tr *ngFor="let h of hooksTable.data" (click)="displayDetail(h)" class="pointing">
                             <td>
                                 <app-status-icon [status]="h.status" nz-tooltip="{{h.last_error}}"></app-status-icon>
                             </td>
